Filled out the company links
Need to do the icons next and clean up the website. Possibly switch over to new gender/ethnicity/leadership faces I've been thinking about.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://www.gamedevdiversity.com/"
 languageCode = "en-us"
-title = "Video Game Developer Diversity"
+title = "Game Developer Diversity"
 theme = "gdd"
